# pam-afs-session

./: .bzrignore  .cvsignore  .gitignore  CHANGES  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen  config.h.in  configure  configure.ac  internal.h  libpam-afs-session_1.3.orig.tar.gz.delta  libpam-afs-session_1.3.orig.tar.gz.id  libpam-afs-session_1.4.orig.tar.gz.delta  libpam-afs-session_1.4.orig.tar.gz.id  libpam-afs-session_1.5.orig.tar.gz.delta  libpam-afs-session_1.5.orig.tar.gz.id  libpam-afs-session_1.6.orig.tar.gz.delta  libpam-afs-session_1.6.orig.tar.gz.id  libpam-afs-session_1.7.orig.tar.gz.delta  libpam-afs-session_1.7.orig.tar.gz.id  libpam-afs-session_2.0.orig.tar.gz.delta  libpam-afs-session_2.0.orig.tar.gz.id  libpam-afs-session_2.1.orig.tar.gz.delta  libpam-afs-session_2.1.orig.tar.gz.id  libpam-afs-session_2.2.orig.tar.gz.delta  libpam-afs-session_2.2.orig.tar.gz.id  libpam-afs-session_2.3.orig.tar.gz.delta  libpam-afs-session_2.3.orig.tar.gz.id  libpam-afs-session_2.4.orig.tar.gz.delta  libpam-afs-session_2.4.orig.tar.gz.id  libpam-afs-session_2.5.orig.tar.gz.delta  libpam-afs-session_2.5.orig.tar.gz.id  libpam-afs-session_2.6.orig.tar.xz.delta  libpam-afs-session_2.6.orig.tar.xz.id  (+11 more)
debian/: README.Debian  changelog  control  copyright  examples  libpam-openafs-session.NEWS  libpam-openafs-session.links  pam-auth-update  prerm  rules  source.lintian-overrides  watch
debian/source/: local-patch-header
debian/upstream/: signing-key.asc
examples/debian/: common-account  common-auth  common-session
examples/redhat/: system-auth
examples/solaris/: pam.conf
kafs/: kafs.c  kafs.h  sys-darwin10.c
m4/: kafs.m4  krb5.m4
pam-util/: args.c  args.h  logging.c  logging.h  options.c  options.h  vector.c  vector.h
portable/: k_haspag.c  kafs.h  krb5-extra.c  krb5.h  system.h
tests/: TESTS
tests/data/scripts/basic/: establish  establish-debug  no-ticket  no-ticket-debug  noop  noop-debug  open-session  open-session-debug  refresh  refresh-debug  reinit  reinit-debug  unknown  unknown-debug
tests/data/scripts/cells/: establish  establish-debug  open-session  open-session-debug  reinit  reinit-debug
tests/data/scripts/hasafs/: unavailable  unavailable-debug
tests/data/scripts/sigchld/: establish
tests/docs/: pod-spelling-t  pod-t
tests/fakepam/: README  api.c  api.h  data.c  logging.c  stubs.c  testing.c  testing.h
tests/kafs/: basic.c  haspag-t.c
tests/module/: basic-t.c  cells-t.c  fakekafs.c  full-t  full.c  hasafs-t.c  options.c  pag-t.c  public.c  sigchld-t.c  tokens.c  util.c  util.h
tests/pam-util/: args-t.c  args.c  fakepam-t.c  logging-t.c  logging.c  options-t.c  vector-t.c
